[gd_scene load_steps=100 format=3 uid="uid://quox87bb6okb"]

[ext_resource type="Script" uid="uid://dwqfhnerk2o6c" path="res://chez_yann.gd" id="1_lifh0"]
[ext_resource type="Texture2D" uid="uid://deyqvr6xegdrj" path="res://assets/backgrounds/piece_yann.png" id="2_dk3hb"]
[ext_resource type="Script" uid="uid://bxxwrnqhnb67e" path="res://cadre.gd" id="3_5kfan"]
[ext_resource type="Texture2D" uid="uid://et44vuh7waw0" path="res://sprites/Objets/cadre_obj.png" id="3_21ub8"]
[ext_resource type="Script" uid="uid://cool1ahid5i8b" path="res://carton.gd" id="3_criyy"]
[ext_resource type="Texture2D" uid="uid://cg8ghqkpcitfo" path="res://sprites/Objets/carton.png" id="4_lkr1c"]
[ext_resource type="Script" uid="uid://i6gphdnx2ias" path="res://context_menu.gd" id="5_3ipe8"]
[ext_resource type="Script" uid="uid://3yo35vys8ogp" path="res://hover_area.gd" id="6_qjw3s"]
[ext_resource type="Texture2D" uid="uid://iu8qja85o4lw" path="res://sprites/UI/oeil-spritesheet.png" id="7_kyyng"]
[ext_resource type="Texture2D" uid="uid://cgu4tvpxvhx15" path="res://sprites/UI/main_blue1.png" id="8_mbdna"]
[ext_resource type="Texture2D" uid="uid://w6gvxq1cffnc" path="res://sprites/Objets/ordi-Sheet.png" id="8_mrf0o"]
[ext_resource type="Texture2D" uid="uid://v6lv5hpbbowr" path="res://sprites/UI/main_blue2.png" id="9_oik1x"]
[ext_resource type="Script" uid="uid://ccah5mc1st1fg" path="res://hand_button.gd" id="10_4bvsw"]
[ext_resource type="Script" uid="uid://e34hfgpy066i" path="res://tv.gd" id="11_pdin3"]
[ext_resource type="Texture2D" uid="uid://buwhf2xt5nvoq" path="res://sprites/Objets/tv.png" id="12_6ac8t"]
[ext_resource type="Script" uid="uid://cuqcja2ro4w65" path="res://scripts/ordi.gd" id="13_17ec4"]
[ext_resource type="PackedScene" uid="uid://b2pu573y1yatl" path="res://employeur.tscn" id="15_sbs8g"]
[ext_resource type="Script" uid="uid://c5fghqv78cqo1" path="res://kiki.gd" id="16_opjl1"]
[ext_resource type="Texture2D" uid="uid://e6lfe848dwke" path="res://sprites/Objets/canape.png" id="18_3w6es"]
[ext_resource type="Texture2D" uid="uid://dd124isjfp07x" path="res://sprites/Objets/canape_cover.png" id="18_vtsx5"]
[ext_resource type="Script" uid="uid://vmfm1qbavptn" path="res://computer.gd" id="19_5xjue"]
[ext_resource type="Texture2D" uid="uid://ev8l37k13udj" path="res://sprites/Objets/kiki-Sheet.png" id="19_dkmgb"]
[ext_resource type="Texture2D" uid="uid://d0chasrf2g7lb" path="res://sprites/Objets/clavier-souris-Sheet.png" id="21_hitn6"]
[ext_resource type="Script" uid="uid://cdvhkmswwhxg6" path="res://clavier_souris.gd" id="21_mrf0o"]
[ext_resource type="Texture2D" uid="uid://2d8hmjbem7xc" path="res://sprites/Objets/camera.png" id="25_vtsx5"]
[ext_resource type="Texture2D" uid="uid://bth7tr7n2jf6l" path="res://sprites/Objets/aloe.png" id="26_dkmgb"]
[ext_resource type="Texture2D" uid="uid://cu0aao5x3b741" path="res://assets/backgrounds/barre-noire.png" id="27_vvuww"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5kfan"]
size = Vector2(195, 114)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfg8j"]
atlas = ExtResource("3_21ub8")
region = Rect2(0, 0, 200, 120)

[sub_resource type="SpriteFrames" id="SpriteFrames_n8b81"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfg8j")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_84nj0"]
size = Vector2(205, 124)

[sub_resource type="AtlasTexture" id="AtlasTexture_wy04w"]
atlas = ExtResource("4_lkr1c")
region = Rect2(0, 0, 128, 112)

[sub_resource type="SpriteFrames" id="SpriteFrames_dfg8j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wy04w")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_opd1e"]
size = Vector2(128, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmcsd"]
atlas = ExtResource("12_6ac8t")
region = Rect2(0, 0, 308, 324)

[sub_resource type="SpriteFrames" id="SpriteFrames_lbywn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmcsd")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3w6es"]
size = Vector2(279, 262)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5xjue"]
size = Vector2(20, 51)

[sub_resource type="SpriteFrames" id="SpriteFrames_levge"]
animations = [{
"frames": [],
"loop": true,
"name": &"hue",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_levge"]
atlas = ExtResource("8_mrf0o")
region = Rect2(0, 0, 272, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ybcg"]
atlas = ExtResource("8_mrf0o")
region = Rect2(272, 0, 272, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_vk6yo"]
atlas = ExtResource("8_mrf0o")
region = Rect2(544, 0, 272, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_eikhq"]
atlas = ExtResource("8_mrf0o")
region = Rect2(816, 0, 272, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5edt"]
atlas = ExtResource("8_mrf0o")
region = Rect2(1088, 0, 272, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_n40ho"]
atlas = ExtResource("8_mrf0o")
region = Rect2(1360, 0, 272, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_sggff"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_levge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ybcg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vk6yo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eikhq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5edt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n40ho")
}],
"loop": true,
"name": &"Hue",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mrf0o"]
size = Vector2(172, 124)

[sub_resource type="AtlasTexture" id="AtlasTexture_sggff"]
atlas = ExtResource("21_hitn6")
region = Rect2(0, 0, 148, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_bf2m5"]
atlas = ExtResource("21_hitn6")
region = Rect2(148, 0, 148, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_eiowk"]
atlas = ExtResource("21_hitn6")
region = Rect2(296, 0, 148, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qprt"]
atlas = ExtResource("21_hitn6")
region = Rect2(444, 0, 148, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_adedi"]
atlas = ExtResource("21_hitn6")
region = Rect2(592, 0, 148, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_eb3gh"]
atlas = ExtResource("21_hitn6")
region = Rect2(740, 0, 148, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_wy04w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sggff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bf2m5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eiowk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qprt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adedi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eb3gh")
}],
"loop": true,
"name": &"hue",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dfg8j"]
size = Vector2(147, 22)

[sub_resource type="Curve2D" id="Curve2D_ign4d"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1026, 545, 0, 0, 0, 0, -147, 543)
}
point_count = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_5kfan"]
atlas = ExtResource("19_dkmgb")
region = Rect2(4756, 0, 164, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtsx5"]
atlas = ExtResource("19_dkmgb")
region = Rect2(4920, 0, 164, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkmgb"]
atlas = ExtResource("19_dkmgb")
region = Rect2(5084, 0, 164, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvuww"]
atlas = ExtResource("19_dkmgb")
region = Rect2(5248, 0, 164, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkqro"]
atlas = ExtResource("19_dkmgb")
region = Rect2(5412, 0, 164, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8b81"]
atlas = ExtResource("19_dkmgb")
region = Rect2(984, 0, 164, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_84nj0"]
atlas = ExtResource("19_dkmgb")
region = Rect2(1148, 0, 164, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ecm3"]
atlas = ExtResource("19_dkmgb")
region = Rect2(1312, 0, 164, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ovql"]
atlas = ExtResource("19_dkmgb")
region = Rect2(1476, 0, 164, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7t4a"]
atlas = ExtResource("19_dkmgb")
region = Rect2(1640, 0, 164, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bqg8"]
atlas = ExtResource("19_dkmgb")
region = Rect2(3444, 0, 164, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_luceb"]
atlas = ExtResource("19_dkmgb")
region = Rect2(3608, 0, 164, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdlxw"]
atlas = ExtResource("19_dkmgb")
region = Rect2(3772, 0, 164, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7eok"]
atlas = ExtResource("19_dkmgb")
region = Rect2(3936, 0, 164, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_usnsm"]
atlas = ExtResource("19_dkmgb")
region = Rect2(4100, 0, 164, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvymh"]
atlas = ExtResource("19_dkmgb")
region = Rect2(4264, 0, 164, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0mk0"]
atlas = ExtResource("19_dkmgb")
region = Rect2(4428, 0, 164, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_wy3ac"]
atlas = ExtResource("19_dkmgb")
region = Rect2(4592, 0, 164, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmq8n"]
atlas = ExtResource("19_dkmgb")
region = Rect2(1968, 0, 164, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fir5"]
atlas = ExtResource("19_dkmgb")
region = Rect2(2132, 0, 164, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhfvp"]
atlas = ExtResource("19_dkmgb")
region = Rect2(2296, 0, 164, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8bpv"]
atlas = ExtResource("19_dkmgb")
region = Rect2(2460, 0, 164, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_eficp"]
atlas = ExtResource("19_dkmgb")
region = Rect2(2624, 0, 164, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_45jhd"]
atlas = ExtResource("19_dkmgb")
region = Rect2(2788, 0, 164, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_pg4af"]
atlas = ExtResource("19_dkmgb")
region = Rect2(2952, 0, 164, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_kauhm"]
atlas = ExtResource("19_dkmgb")
region = Rect2(3116, 0, 164, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_wiumm"]
atlas = ExtResource("19_dkmgb")
region = Rect2(3280, 0, 164, 112)

[sub_resource type="SpriteFrames" id="SpriteFrames_tmcsd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kfan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtsx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkmgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvuww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkqro")
}],
"loop": false,
"name": &"down",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8b81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84nj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ecm3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ovql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7t4a")
}],
"loop": true,
"name": &"ears",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bqg8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_luceb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdlxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7eok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usnsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvymh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0mk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wy3ac")
}],
"loop": false,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmq8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fir5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhfvp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8bpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eficp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45jhd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pg4af")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kauhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wiumm")
}],
"loop": true,
"name": &"jump",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vtsx5"]
size = Vector2(63.5, 43)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_21ub8"]
size = Vector2(289.109, 206.931)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbywn"]
atlas = ExtResource("7_kyyng")
region = Rect2(0, 0, 84, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8dwu"]
atlas = ExtResource("7_kyyng")
region = Rect2(84, 0, 84, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_xoui6"]
atlas = ExtResource("7_kyyng")
region = Rect2(168, 0, 84, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_qr462"]
atlas = ExtResource("7_kyyng")
region = Rect2(252, 0, 84, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cyvm"]
atlas = ExtResource("7_kyyng")
region = Rect2(336, 0, 84, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_jh66g"]
atlas = ExtResource("7_kyyng")
region = Rect2(420, 0, 84, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_is4ft"]
atlas = ExtResource("7_kyyng")
region = Rect2(504, 0, 84, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlo51"]
atlas = ExtResource("7_kyyng")
region = Rect2(588, 0, 84, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8sj1"]
atlas = ExtResource("7_kyyng")
region = Rect2(672, 0, 84, 60)

[sub_resource type="SpriteFrames" id="SpriteFrames_fkqro"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbywn")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8dwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xoui6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qr462")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cyvm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jh66g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_is4ft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlo51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8sj1")
}],
"loop": true,
"name": &"open",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_3b7wl"]
atlas = ExtResource("8_mbdna")
region = Rect2(0, 0, 60, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_dchdl"]
atlas = ExtResource("9_oik1x")
region = Rect2(0, 0, 60, 68)

[sub_resource type="SpriteFrames" id="SpriteFrames_q5up8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3b7wl")
}],
"loop": true,
"name": &"close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dchdl")
}],
"loop": true,
"name": &"open",
"speed": 5.0
}]

[node name="ChezYann" type="Node2D"]
script = ExtResource("1_lifh0")

[node name="PieceExportSm" type="Sprite2D" parent="."]
position = Vector2(480, 299)
texture = ExtResource("2_dk3hb")
offset = Vector2(480, 311)

[node name="cadre" type="CharacterBody2D" parent="."]
position = Vector2(956, 464)
input_pickable = true
script = ExtResource("3_5kfan")
context_menu_path = NodePath("../ContextMenu")
target_scene = "res://cadre_scene.tscn"

[node name="Area2D" type="Area2D" parent="cadre"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="cadre/Area2D"]
position = Vector2(-2, 2)
shape = SubResource("RectangleShape2D_5kfan")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="cadre"]
sprite_frames = SubResource("SpriteFrames_n8b81")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="cadre"]
shape = SubResource("RectangleShape2D_84nj0")

[node name="carton" type="CharacterBody2D" parent="."]
position = Vector2(644, 336)
input_pickable = true
script = ExtResource("3_criyy")
context_menu_path = NodePath("../ContextMenu")
target_scene = "res://carton_docs.tscn"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="carton"]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_dfg8j")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="carton"]
position = Vector2(0, -18)
shape = SubResource("RectangleShape2D_opd1e")

[node name="tv" type="CharacterBody2D" parent="."]
position = Vector2(1703, 519)
input_pickable = true
script = ExtResource("11_pdin3")
context_menu_path = NodePath("../ContextMenu")
target_scene = "res://scene_tv.tscn"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="tv"]
position = Vector2(3, -5)
sprite_frames = SubResource("SpriteFrames_lbywn")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="tv"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_3w6es")

[node name="Computer" type="CharacterBody2D" parent="."]
position = Vector2(769, 663)
script = ExtResource("19_5xjue")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Computer"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_5xjue")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Computer"]
sprite_frames = SubResource("SpriteFrames_levge")
animation = &"hue"

[node name="ordi" type="CharacterBody2D" parent="."]
position = Vector2(446, 552)
input_pickable = true
script = ExtResource("13_17ec4")
target_scene = "res://informatique.tscn"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="ordi"]
texture_filter = 1
position = Vector2(2, 0)
sprite_frames = SubResource("SpriteFrames_sggff")
animation = &"Hue"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ordi"]
position = Vector2(-27, -13)
shape = SubResource("RectangleShape2D_mrf0o")

[node name="ClavierSouris" type="CharacterBody2D" parent="."]
position = Vector2(482, 626)
script = ExtResource("21_mrf0o")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="ClavierSouris"]
sprite_frames = SubResource("SpriteFrames_wy04w")
animation = &"hue"
frame = 4
frame_progress = 0.139212

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClavierSouris"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_dfg8j")

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(482, 324)
curve = SubResource("Curve2D_ign4d")
metadata/_edit_group_ = true

[node name="PathFollower" type="PathFollow2D" parent="Path2D"]
position = Vector2(1026, 545)
rotation = 3.14159
rotates = false

[node name="Employeur" parent="Path2D/PathFollower" instance=ExtResource("15_sbs8g")]
rotation = 3.14159

[node name="Canape" type="Sprite2D" parent="."]
position = Vector2(1510, 824)
texture = ExtResource("18_3w6es")

[node name="kiki" type="CharacterBody2D" parent="."]
position = Vector2(1431, 621)
input_pickable = true
script = ExtResource("16_opjl1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="kiki"]
position = Vector2(-9, -3)
sprite_frames = SubResource("SpriteFrames_tmcsd")
animation = &"ears"
frame = 3
frame_progress = 0.433129

[node name="CollisionShape2D" type="CollisionShape2D" parent="kiki"]
position = Vector2(-0.5, -3)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_vtsx5")

[node name="Cover" type="Sprite2D" parent="."]
position = Vector2(1506, 820)
texture = ExtResource("18_vtsx5")

[node name="ContextMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("5_3ipe8")
metadata/_edit_use_anchors_ = true

[node name="HoverArea" type="Area2D" parent="ContextMenu"]
scale = Vector2(1.01, 1.01)
script = ExtResource("6_qjw3s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ContextMenu/HoverArea"]
position = Vector2(-14.8515, -4.45544)
shape = SubResource("RectangleShape2D_21ub8")

[node name="EyeButton" type="TextureButton" parent="ContextMenu"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -94.49
offset_top = -115.0
offset_right = -12.69
offset_bottom = -45.0
grow_horizontal = 0
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="ContextMenu/EyeButton"]
position = Vector2(42, 39)
sprite_frames = SubResource("SpriteFrames_fkqro")
animation = &"open"

[node name="HandButton" type="TextureButton" parent="ContextMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.35
offset_top = -109.475
offset_right = 59.65
offset_bottom = -41.475
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_4bvsw")
metadata/_edit_use_anchors_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="ContextMenu/HandButton"]
position = Vector2(28.35, 31.475)
sprite_frames = SubResource("SpriteFrames_q5up8")
animation = &"open"

[node name="FadeTimer" type="Timer" parent="."]
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="SpeechBubbleContainer" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 480.0
offset_top = 237.0
offset_right = 480.0
offset_bottom = 237.0
metadata/_edit_use_anchors_ = true

[node name="Camera" type="Sprite2D" parent="."]
position = Vector2(1089, 950)
texture = ExtResource("25_vtsx5")

[node name="Aloe" type="Sprite2D" parent="."]
position = Vector2(116, 810)
texture = ExtResource("26_dkmgb")

[node name="Barre-noire" type="Sprite2D" parent="."]
visible = false
position = Vector2(958, 29)
texture = ExtResource("27_vvuww")

[node name="Barre-noire2" type="Sprite2D" parent="."]
visible = false
position = Vector2(962, 1180)
texture = ExtResource("27_vvuww")

[connection signal="input_event" from="cadre/Area2D" to="cadre" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="ContextMenu" to="kiki" method="_on_context_menu_mouse_entered"]
[connection signal="mouse_entered" from="ContextMenu/EyeButton" to="ContextMenu" method="_on_eye_button_mouse_entered"]
[connection signal="mouse_exited" from="ContextMenu/EyeButton" to="ContextMenu" method="_on_eye_button_mouse_exited"]
[connection signal="pressed" from="ContextMenu/EyeButton" to="ContextMenu" method="_on_eye_button_pressed"]
[connection signal="mouse_entered" from="ContextMenu/HandButton" to="ContextMenu" method="_on_hand_button_mouse_entered"]
[connection signal="mouse_exited" from="ContextMenu/HandButton" to="ContextMenu" method="_on_hand_button_mouse_exited"]
[connection signal="pressed" from="ContextMenu/HandButton" to="ContextMenu" method="_on_hand_button_pressed"]
